# HedgeLock

./: .coverage  .coveragerc  .cursorrules  .env.example  .flake8  .gitignore  AI_TASK_RULES.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASE.md  check_metrics_tests.sh  coverage.xml  docker-compose.test.yml  docker-compose.v2.yml  docker-compose.yml  package.json  pyproject.toml  run_all_tests.sh  run_core_tests.sh  run_edge_tests.sh  run_final_tests.sh  run_full_test.sh  run_kafka_core_tests.sh  run_kafka_integration_tests.sh  run_metrics_tests.sh  run_pnl_tests.sh  run_single_test.sh  run_storage_tests.sh  run_tests.py  test_funding_flow.py  test_funding_message.json  test_position_manager_coverage.py  validate_kafka_tests.py  verify_tests.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
dev_journaling/: SPRINT_HL-07_TRADE_EXECUTOR.md  SPRINT_HL-08_FUNDING_AWARENESS.md
docker/: Dockerfile.alert  Dockerfile.base  Dockerfile.collector  Dockerfile.dummy  Dockerfile.funding-engine  Dockerfile.hedger  Dockerfile.loan-manager  Dockerfile.position-manager  Dockerfile.reserve-manager  Dockerfile.risk-engine  Dockerfile.safety-manager  Dockerfile.test  Dockerfile.test-runner  Dockerfile.trade-executor  Dockerfile.treasury
docs/: BRANCHING.md  CODECOV_SETUP.md  COMMITS.md  CONFIGURATION_REFERENCE.md  DEPLOYMENT_GUIDE_v1.2.0.md  DEPLOYMENT_GUIDE_v2.0.md  EMERGENCY_PROCEDURES.md  FEATURE_COVERAGE_ANALYSIS.md  IMPLEMENTATION_ROADMAP_v2.0.md  LOCAL_DEVELOPMENT.md  PHASE1_PROGRESS.md  PHASE1_QUICKSTART.md  POSITION_MANAGER_TEST_COVERAGE.md  PRODUCT_WIKI.md  README.md  RELEASE.md  SYSTEM_OVERVIEW.md  TROUBLESHOOTING.md  architecture.mermaid
monitoring/: funding_dashboard.html  prometheus.yml
project_memory/: AGENT_INSTRUCTIONS.yaml  COMPONENT_MAP.yaml  INTEGRATION_FLOWS.yaml  PROJECT_MEMORY.yaml  SPRINT_HL06_TASKS.yaml  SPRINT_PLANNING.yaml
(+167 files in other folders)
